[package]
name = "libnachos"
version = "0.1.0"
edition = "2021"

[dependencies.libguac]
path = "../libguac"

[dependencies.thiserror]
version = "1.0"

[dependencies.futures]
version = "0.3"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = ["v4"]

[dependencies.socketpair]
version = "0.14"

[dependencies.nix]
version = "0.23"

[dependencies.tokio]
version = "1.16"
features = ["full"]
