[package]
name = "nachos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bincode]
version = "1.3.3"

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_cbor]
version = "0.11"

[dependencies.rmp-serde]
version = "1.0"

[dependencies.flate2]
version = "1.0"

[dependencies.rand]
version = "0.8"
default-features = false
features = ["std_rng"]

[dependencies.yew]
version = "0.19"
