[package]
name = "nachos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.17"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.warp]
version = "0.3"

[dependencies.libnachos]
path = "../libnachos"

[dependencies.ssh-handler]
path = "../ssh/handler"
